--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,14 @@
 
+.App {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  
+  .Products {
+    /* grid-row: 1/3; */
+    grid-column: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row: 1fr 1fr 1fr 1fr 1fr 1fr;
+    margin-left: 4vw;
+  }
