module 3 mid-module assessment complete

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,7 @@
-
+.App {
+    display: grid;
+    grid-template-columns: 7fr 3fr;
+    grid-template-areas: "left right";
+}
+.left  { grid-area: left }
+.right { grid-area: right }
