--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,55 @@
+.App {
+  display: grid;
+  grid-template-columns: 60% 40%;
+}
+.App h1 {
+  grid-area: 1 /2 / 1 / 1;
+}
+.Products {
+  grid-column: 1 /2;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-gap: 2px;
+  padding-left: 30px;
+  padding-bottom: 30px;
+}
 
+.Products img {
+  width: 170px;
+  height: 150px;
+}
+.Products button {
+  width: 170px;
+}
+
+.Products div {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: left;
+  border: 1px solid green;
+  list-style: none;
+  padding: 20px;
+  margin: 5px;
+}
+.Right {
+  grid-column: 2 /3;
+  margin-left: 40px;
+}
+.cart {
+  display: block;
+  margin-left: 40px;
+}
+.cart h1 {
+  font-size: 32px;
+}
+
+.CheckOut {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  margin-left: 40px;
+}
+
+form * {
+  width: 35%;
+}
