--- a/src/Components/Products.css
+++ b/src/Components/Products.css
@@ -1,4 +1,4 @@
-.product {
+/* .product {
     list-style: none;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -10,4 +10,4 @@
 }
 img {
     width: 150px;
-}
+} */
