--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,53 @@
+.App{
+    display: grid;
+    grid-template-columns:repeat(2, 1fr)
+}
+.Store{
+   
+    grid-template-columns: 1/2;
+    gap: 10px;
+    /* margin: 10px;
+    width: 900px; */
+    /* border: 1px solid black; */
+    /* text-align: center; */
+}
+.Shops-Card{
+ margin-top: 150px;
+  float: right;
+  grid-template-columns: 2/3;
+  text-align: center;
+  
+}
+.form label{
+ display: block;
+}
+.form button{
+    display: block;
+    text-align: center;
+    grid-template-columns: 2/3;
+    margin: auto;
+}
 
+.storeItems{
+    display: flex;
+    grid-template-columns: 2fr, 1fr;
+    gap: 5px;
+    
+}
+.each{
+    float: left;
+    border: 1px solid black;
+    text-align: center;
+    word-wrap: break-word;
+    width: 300px;
+    margin: 10px;
+}
+/* .storeItems li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
+/* .storeItems img{
+    width: 150px;
+    height: 150px;
+} */
