--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,20 @@
 
+.App {
+    justify-content: center;
+}
+
+.grid-container {
+    display: grid;
+    grid-template: auto / auto auto auto;
+    /* grid-template-columns: 1fr 1fr; */
+    grid-gap: 10px;
+    background-color: white;
+    padding: 10px;
+  }
+  
+  .grid-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+  }
