--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,14 @@
-
+.App {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  
+  .Products {
+    grid-row: 1/3;
+  }
+  
+  .leftSide,
+  .rightSide {
+    padding: 0 20px;
+  }
+  
