Finished Module-3 assessment (Jordan)

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,11 @@
 
+.App{
+    display: grid;
+    grid-template-columns: 50% 40%;
+    margin-left: 2%;
+    justify-content: space-around;
+}
+
+.right_column{
+    margin-left: 30%;
+}
