--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,28 @@
+.App {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 
+.col-1 {
+  border: solid black 2px;
+  padding: 10px;
+}
+
+.col-2 {
+  border: solid black 2px;
+  padding: 10px;
+}
+
+.Products {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+}
+
+.product {
+  /* border: solid black 1px; */
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
