--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App{
+.Products{
     display: grid;
     grid-template-columns:repeat(2, 1fr)
 }
@@ -6,10 +6,7 @@
    
     grid-template-columns: 1/2;
     gap: 10px;
-    /* margin: 10px;
-    width: 900px; */
-    /* border: 1px solid black; */
-    /* text-align: center; */
+    
 }
 .Shops-Card{
  margin-top: 150px;
@@ -42,12 +39,4 @@
     width: 300px;
     margin: 10px;
 }
-/* .storeItems li{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
-/* .storeItems img{
-    width: 150px;
-    height: 150px;
-} */
+
