--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,31 @@
 .App {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(10, 1fr);
+    padding: 0 60px 0 60px;
 }
-
+.left {
+    grid-column: 1 / 3;
+}
+.right {
+    grid-column: 3 / 4;
+}
 .Products {
-    border: 1px solid green;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 50%;
-    grid-column: 1 / 2;
 }
 
 .Product {
-    width: 40%;
+    margin-right: 40px;
+    margin-left: 40px;
 }
-
-/* .even {
-    grid-column: 1 / 2;
-}
-
-.odd {
-    grid-column: 2 / 3;
-} */
 
 .Cart {
-    grid-column: 2 / 3;
+    grid-column: 3 / 4;
+    padding: 40px;
+}
+
+.Checkout {
+    grid-column: 3 / 4;
+    padding: 40px;
 }
