all tests finally passing

--- a/src/components/MainListing.css
+++ b/src/components/MainListing.css
@@ -1,5 +1,5 @@
-.Main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 5px;
-  }
+.Products {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  column-gap: 60px;
+}
