--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,12 @@
   
-.App {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  
-  .Products {
-    grid-row: 1/3;
-  }
-  
-  .leftSide,
-  .rightSide {
-    padding: 0 20px;
-  }
+
+.App{
+  display: grid;
+  grid-template-columns: 50% 40%;
+  margin-left: 2%;
+  justify-content: space-around;
+}
+
+.right_column{
+  margin-left: 30%;
+}
